--- a/profile.htm
+++ b/profile.htm
@@ -8,6 +8,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <style>
+        .icons{
+            margin-right:auto;
+            margin-left:auto;
+        }
+        .icons img{
+            margin-left:.5em;
+            margin-right:.5em
+        }
+    </style>
 </head>
 <body>
     <!--<div style="background-image:url('code1.jpg');height:500px;-webkit-filter:blur(7px);position:fixed;left:0;right:0"></div>-->
@@ -18,7 +28,7 @@
                     <p style="margin-right:auto; margin-left:auto; margin-top:2em; margin-bottom:.5em"><img src="profile_pic.png" alt="profile pic" width="250" height="200"></p> <!--style="margin:1em 1em 0em 8em" -->
                 </div>
                 <div class="row">
-                    <p style="margin-right:auto; margin-left:auto">
+                    <p class="icons" style="margin-right:auto; margin-left:auto">
                         <img src="email5.png" alt="email" height="30" width="30">
                         <img src="linkedin4.png" alt="linkedin" height="30" width="30">
                         <img src="github4.png" alt="github" height="30" width="30">
@@ -26,12 +36,12 @@
                 </div>
             </div>
             <div class="col-md-9" style="padding-left:1em">
-                <h1 style="margin-top:1.5em;color:white">Joshua Jackson</h1>
+                <h1 style="margin-top:1em;color:white">Joshua Jackson</h1>
                 <p style="font-size:1.5rem; color:white">Computer science student at The University of Maryland, Baltimore County, with a passion for learning, creating, and coding.
                 <br>Eager to gain experience and soak up as much information as possible. Strong Leadership skills and a quick study. <br>Currently interning as a junior software developer at 4S Silversword LLC.</p>
             </div>
         </div>
-        <!--<hr style="height:10px; background-color:darkslateblue; margin:0em"> <!--style="border-style:solid; margin:0; display:block; height:10px; color:darkslateblue">-->
+        <hr style="height:10px; background-image:linear-gradient(to right, #ca2b61, #753888); margin:0em"> <!--style="border-style:solid; margin:0; display:block; height:10px; color:darkslateblue">-->
     </div>
 </body>
 </html>
