--- a/profile.htm
+++ b/profile.htm
@@ -22,7 +22,7 @@
 <body>
     <!--<div style="background-image:url('code1.jpg');height:500px;-webkit-filter:blur(7px);position:fixed;left:0;right:0"></div>-->
     <div style="margin:0em">
-        <div class="row" style="background-image:linear-gradient(blueviolet, darkslateblue)"><!--style="background-image:url('code1.jpg');-webkit-filter:blur(5px)"> <"background-color:blueviolet">-->
+        <div class="row" style="background-image:linear-gradient(rgb(70, 43, 226), darkslateblue, blueviolet)"><!--style="background-image:url('code1.jpg');-webkit-filter:blur(5px)"> <"background-color:blueviolet">-->
             <div class="col-md-3">
                 <div class="row">
                     <p style="margin-right:auto; margin-left:auto; margin-top:2em; margin-bottom:.5em"><img src="profile_pic.png" alt="profile pic" width="250" height="200"></p> <!--style="margin:1em 1em 0em 8em" -->
@@ -30,18 +30,18 @@
                 <div class="row">
                     <p class="icons" style="margin-right:auto; margin-left:auto">
                         <img src="email5.png" alt="email" height="30" width="30">
-                        <img src="linkedin4.png" alt="linkedin" height="30" width="30">
+                        <a class="icon" href="www.linkedin.com/in/joshua-jackson-8b5ab5182"><img src="linkedin4.png" alt="linkedin" height="30" width="30"></a>
                         <img src="github4.png" alt="github" height="30" width="30">
                     </p>
                 </div>
             </div>
             <div class="col-md-9" style="padding-left:1em">
-                <h1 style="margin-top:1em;color:white">Joshua Jackson</h1>
-                <p style="font-size:1.5rem; color:white">Computer science student at The University of Maryland, Baltimore County, with a passion for learning, creating, and coding.
-                <br>Eager to gain experience and soak up as much information as possible. Strong Leadership skills and a quick study. <br>Currently interning as a junior software developer at 4S Silversword LLC.</p>
+                <h1 style="margin-top:1.5em;color:rgb(231, 230, 230); font-family:Georgia,serif">Joshua Jackson</h1>
+                <p style="font-size:1.5rem; color:rgb(231, 230, 230); font-family:Georgia,serif; margin-right:6em">Computer science student at The University of Maryland, Baltimore County, with a passion for learning, creating, and coding.
+                Eager to gain experience and soak up as much information as possible. Strong Leadership skills and a quick study. Currently interning as a junior software developer at 4S Silversword LLC.</p>
             </div>
         </div>
-        <hr style="height:10px; background-image:linear-gradient(to right, #ca2b61, #753888); margin:0em"> <!--style="border-style:solid; margin:0; display:block; height:10px; color:darkslateblue">-->
+        <hr style="height:5px; background-image:linear-gradient(to right, #ca2b61, #753888); margin:0em"> <!--style="border-style:solid; margin:0; display:block; height:10px; color:darkslateblue">-->
     </div>
 </body>
 </html>
