--- a/profile.htm
+++ b/profile.htm
@@ -15,7 +15,11 @@
         }
         .icons img{
             margin-left:.5em;
-            margin-right:.5em
+            margin-right:.5em;
+            transition: all 0.2s ease-in-out;
+        }
+        .icons img:hover{
+            box-shadow: 0 0px 15px 5px rgb(231, 230, 230, .4);
         }
     </style>
 </head>
@@ -29,9 +33,9 @@
                 </div>
                 <div class="row">
                     <p class="icons" style="margin-right:auto; margin-left:auto">
-                        <img src="email5.png" alt="email" height="30" width="30">
-                        <a class="icon" href="www.linkedin.com/in/joshua-jackson-8b5ab5182"><img src="linkedin4.png" alt="linkedin" height="30" width="30"></a>
-                        <img src="github4.png" alt="github" height="30" width="30">
+                        <a href="mailto:jbjacks113@gmail.com"><img src="email5.png" alt="email" height="30" width="30"></a>
+                        <a href="https://www.linkedin.com/in/joshua-jackson-8b5ab5182" target="_blank"><img src="linkedin4.png" alt="linkedin" height="30" width="30"></a>
+                        <a href="https://github.com/jbjacks" target="_blank"><img src="github4.png" alt="github" height="30" width="30"></a>
                     </p>
                 </div>
             </div>
