--- a/profile.htm
+++ b/profile.htm
@@ -23,7 +23,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color:#313146;font-family:Georgia,serif">
     <!--<div style="background-image:url('code1.jpg');height:500px;-webkit-filter:blur(7px);position:fixed;left:0;right:0"></div>-->
     <div style="margin:0em">
         <div class="row" style="background-image:linear-gradient(rgb(70, 43, 226), darkslateblue, blueviolet)"><!--style="background-image:url('code1.jpg');-webkit-filter:blur(5px)"> <"background-color:blueviolet">-->
@@ -46,6 +46,19 @@
             </div>
         </div>
         <hr style="height:5px; background-image:linear-gradient(to right, #ca2b61, #753888); margin:0em"> <!--style="border-style:solid; margin:0; display:block; height:10px; color:darkslateblue">-->
+    </div>
+    <div style="margin:2em">
+        <h2 style="color:rgb(231, 230, 230); padding-left:4em">Work Experience</h2> 
+        <p style="color:rgb(231, 230, 230); padding-left:10em; font-size:1.3rem">Junior Software Developer, 4S Silversword Software and Services LLC</p>
+        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:20em; margin-right:20em; font-size:1.2rem"> Researched and studied Field Programmable Gate Arrays(FPGA's) and given restrictions such as quality, features, and performance, advised employers on which FPGA's best fit their needs.
+            Used Software development Kits(SDK's) and Application Development Interface(API's) to progam hardware such as laser controllers.
+            Sole Developer on programs to simulate different methods of clock synchronization between various UAV's.
+            Programs included the use of space filling Gray code simulated in c++, as well as calulating and comparing phase differences, with and without noise, in matlab
+            Worked with physicist to fully understand the goal of the programs as well as the mathematics, physics, and engineering behind it
+        </p>
+        <br>
+        <hr style="height:.5px; background-color:rgb(231, 230, 230)">
+        <h2 style="color:rgb(231, 230, 230);padding-left:4em">Skills</h2>
     </div>
 </body>
 </html>
