--- a/profile.htm
+++ b/profile.htm
@@ -21,12 +21,24 @@
         .icons img:hover{
             box-shadow: 0 0px 15px 5px rgb(231, 230, 230, .4);
         }
+        li{
+            margin:4em;
+        }
+        ul{
+            color:rgb(231, 230, 230); 
+            font-size:1,2rem; 
+            padding-left:10em; 
+            padding-right:8em
+        }
+        .col-md-4{
+            padding:0em;
+        }
     </style>
 </head>
 <body style="background-color:#313146;font-family:Georgia,serif">
     <!--<div style="background-image:url('code1.jpg');height:500px;-webkit-filter:blur(7px);position:fixed;left:0;right:0"></div>-->
     <div style="margin:0em">
-        <div class="row" style="background-image:linear-gradient(rgb(70, 43, 226), darkslateblue, blueviolet)"><!--style="background-image:url('code1.jpg');-webkit-filter:blur(5px)"> <"background-color:blueviolet">-->
+        <div class="row" style="background-image:linear-gradient(rgb(19, 9, 75), darkslateblue, rgb(124, 81, 165))"><!--style="background-image:url('code1.jpg');-webkit-filter:blur(5px)"> <"background-color:blueviolet">-->
             <div class="col-md-3">
                 <div class="row">
                     <p style="margin-right:auto; margin-left:auto; margin-top:2em; margin-bottom:.5em"><img src="profile_pic.png" alt="profile pic" width="250" height="200"></p> <!--style="margin:1em 1em 0em 8em" -->
@@ -50,15 +62,44 @@
     <div style="margin:2em">
         <h2 style="color:rgb(231, 230, 230); padding-left:4em">Work Experience</h2> 
         <p style="color:rgb(231, 230, 230); padding-left:10em; font-size:1.3rem">Junior Software Developer, 4S Silversword Software and Services LLC</p>
-        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:20em; margin-right:20em; font-size:1.2rem"> Researched and studied Field Programmable Gate Arrays(FPGA's) and given restrictions such as quality, features, and performance, advised employers on which FPGA's best fit their needs.
+        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:20em; margin-right:20em; font-size:1.2rem;"> Researched and studied Field Programmable Gate Arrays(FPGA's) and given restrictions such as quality, features, and performance, advised employers on which FPGA's best fit their needs.
             Used Software development Kits(SDK's) and Application Development Interface(API's) to progam hardware such as laser controllers.
             Sole Developer on programs to simulate different methods of clock synchronization between various UAV's.
             Programs included the use of space filling Gray code simulated in c++, as well as calulating and comparing phase differences, with and without noise, in matlab
             Worked with physicist to fully understand the goal of the programs as well as the mathematics, physics, and engineering behind it
         </p>
         <br>
-        <hr style="height:.5px; background-color:rgb(231, 230, 230)">
+        <hr style="height:1px; width:90%; background-color:rgb(231, 230, 230)">
+    </div>
+    <div style="margin:2em">
         <h2 style="color:rgb(231, 230, 230);padding-left:4em">Skills</h2>
+        <div class="row" style="margin:0 5em">
+            <div class="col-md-4">
+                <ul>
+                    <li>C++</li>
+                    <li>C</li>
+                    <li>Python</li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <ul>
+                    <li>MySQL</li>
+                    <li>Matlab</li>
+                    <li>HTML</li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <ul>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Java</li>
+                </ul>
+            </div>
+        </div>
+        <hr style="height:1px; width:90%; background-color:rgb(231, 230, 230)">
+    </div>
+    <div style="margin:2em">
+        <h2 style="color:rgb(231, 230, 230);padding-left:4em">Projects</h2>
     </div>
 </body>
 </html>
