--- a/profile.htm
+++ b/profile.htm
@@ -41,7 +41,7 @@
         <div class="row" style="background-image:linear-gradient(rgb(19, 9, 75), darkslateblue, rgb(124, 81, 165))"><!--style="background-image:url('code1.jpg');-webkit-filter:blur(5px)"> <"background-color:blueviolet">-->
             <div class="col-md-3">
                 <div class="row">
-                    <p style="margin-right:auto; margin-left:auto; margin-top:2em; margin-bottom:.5em"><img src="profile_pic.png" alt="profile pic" width="250" height="200"></p> <!--style="margin:1em 1em 0em 8em" -->
+                    <p style="margin-right:auto; margin-left:auto; margin-top:2em; margin-bottom:.5em"><img src="profile_pic.png" alt="profile pic" width="250px" height="200px"></p> <!--style="margin:1em 1em 0em 8em" -->
                 </div>
                 <div class="row">
                     <p class="icons" style="margin-right:auto; margin-left:auto">
@@ -51,20 +51,20 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-9" style="padding-left:1em">
-                <h1 style="margin-top:1.5em;color:rgb(231, 230, 230); font-family:Georgia,serif">Joshua Jackson</h1>
-                <p style="font-size:1.5rem; color:rgb(231, 230, 230); font-family:Georgia,serif; margin-right:6em">Computer science student at The University of Maryland, Baltimore County, with a passion for learning, creating, and coding.
+            <div class="col-md-9">
+                <h1 style="margin-top:1.5em; margin-left:24px; color:rgb(231, 230, 230)">Joshua Jackson</h1>
+                <p style="font-size:1.5rem; color:rgb(231, 230, 230); font-family:Georgia,serif; margin-right:6em; margin-left:24px">Computer science student at The University of Maryland, Baltimore County, with a passion for learning, creating, and coding.
                 Eager to gain experience and soak up as much information as possible. Strong Leadership skills and a quick study. Currently interning as a junior software developer at 4S Silversword LLC.</p>
             </div>
         </div>
         <hr style="height:5px; background-image:linear-gradient(to right, #ca2b61, #753888); margin:0em"> <!--style="border-style:solid; margin:0; display:block; height:10px; color:darkslateblue">-->
     </div>
     <div style="margin:2em">
-        <h2 style="color:rgb(231, 230, 230); padding-left:4em">Work Experience</h2> 
-        <p style="color:rgb(231, 230, 230); padding-left:10em; font-size:1.3rem">Junior Software Developer, 4S Silversword Software and Services LLC</p>
-        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:20em; margin-right:20em; font-size:1.2rem;"> Researched and studied Field Programmable Gate Arrays(FPGA's) and given restrictions such as quality, features, and performance, advised employers on which FPGA's best fit their needs.
+        <h2 style="color:rgb(231, 230, 230); padding-left:8%">Work Experience</h2> 
+        <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">Junior Software Developer, 4S Silversword Software and Services LLC</p>
+        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;"> Researched and studied Field Programmable Gate Arrays(FPGA's) and given restrictions such as quality, features, and performance, advised employers on which FPGA's best fit their needs.
             Used Software development Kits(SDK's) and Application Development Interface(API's) to progam hardware such as laser controllers.
-            Sole Developer on programs to simulate different methods of clock synchronization between various UAV's.
+            Sole developer on programs to simulate different methods of clock synchronization between various UAV's.
             Programs included the use of space filling Gray code simulated in c++, as well as calulating and comparing phase differences, with and without noise, in matlab
             Worked with physicist to fully understand the goal of the programs as well as the mathematics, physics, and engineering behind it
         </p>
