--- a/profile.htm
+++ b/profile.htm
@@ -27,7 +27,7 @@
         ul{
             color:rgb(231, 230, 230); 
             font-size:1,2rem; 
-            padding-left:10em; 
+            padding-left:8em; 
             padding-right:8em
         }
         .col-md-4{
@@ -65,14 +65,14 @@
         <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;"> Researched and studied Field Programmable Gate Arrays(FPGA's) and given restrictions such as quality, features, and performance, advised employers on which FPGA's best fit their needs.
             Used Software development Kits(SDK's) and Application Development Interface(API's) to progam hardware such as laser controllers.
             Sole developer on programs to simulate different methods of clock synchronization between various UAV's.
-            Programs included the use of space filling Gray code simulated in c++, as well as calulating and comparing phase differences, with and without noise, in matlab
-            Worked with physicist to fully understand the goal of the programs as well as the mathematics, physics, and engineering behind it
+            Programs included the use of space filling Gray code simulated in C++, as well as calulating and comparing phase differences, with and without noise, in Matlab.
+            Collaborated with physicist to fully understand the goal of the programs as well as the mathematics, physics, and engineering behind it.
         </p>
         <br>
         <hr style="height:1px; width:90%; background-color:rgb(231, 230, 230)">
     </div>
     <div style="margin:2em">
-        <h2 style="color:rgb(231, 230, 230);padding-left:4em">Skills</h2>
+        <h2 style="color:rgb(231, 230, 230);padding-left:8%">Skills</h2>
         <div class="row" style="margin:0 5em">
             <div class="col-md-4">
                 <ul>
@@ -99,7 +99,31 @@
         <hr style="height:1px; width:90%; background-color:rgb(231, 230, 230)">
     </div>
     <div style="margin:2em">
-        <h2 style="color:rgb(231, 230, 230);padding-left:4em">Projects</h2>
+        <h2 style="color:rgb(231, 230, 230);padding-left:8%; padding-bottom:1em">Projects</h2>
+
+        <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">This Website</p>
+        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">
+            Coded from scratch using HTML and CSS.</p>
+
+        <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">UMBC ENES 101 UROS Project</p>
+        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">Worked with engineering students to create a vex robot designed to compete in an obstacle course.<br>
+        Programmed the robot, using RobotC, to respond to a wireless controller</p>
+
+        <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">Blockchain Messaging Program</p>
+        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">Worked with a teamateto design a basic messaging application that ran on top of the Tendermint Core blockchain application platformed.</p>
+
+        <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">Multithreading on the CLoud</p>
+        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">Implemented Conway's Game of Life in C++ with multithreading using the pthread library.<br>
+        Uploaded the program to Microsoft Azure cloud and tested the runtime of the program on the cloud server against the runtime of the program on a local device. </p>
+
+        <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">Ridesharing Database Project</p>
+        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">Created MySQL to create a database for a fictional ridesharing business and populated the database with data.<br>
+        Created scripts to edit the database as well as the data.<br>
+        Created a user interface for the database using python</p>
+
+        <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">CMSC 201 Minesweeper</p>
+        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">Implemented Minesweeper game using 2D arrays in Python.</p>
+
     </div>
 </body>
 </html>
