--- a/profile.htm
+++ b/profile.htm
@@ -33,15 +33,18 @@
         .col-md-4{
             padding:0em;
         }
+        .courses{
+            padding-left:4em;
+            padding-right:4em;
+        }
     </style>
 </head>
 <body style="background-color:#313146;font-family:Georgia,serif">
-    <!--<div style="background-image:url('code1.jpg');height:500px;-webkit-filter:blur(7px);position:fixed;left:0;right:0"></div>-->
     <div style="margin:0em">
-        <div class="row" style="background-image:linear-gradient(rgb(19, 9, 75), darkslateblue, rgb(124, 81, 165))"><!--style="background-image:url('code1.jpg');-webkit-filter:blur(5px)"> <"background-color:blueviolet">-->
+        <div class="row" style="background-image:linear-gradient(rgb(19, 9, 75), darkslateblue, rgb(124, 81, 165))">
             <div class="col-md-3">
                 <div class="row">
-                    <p style="margin-right:auto; margin-left:auto; margin-top:2em; margin-bottom:.5em"><img src="profile_pic.png" alt="profile pic" width="250px" height="200px"></p> <!--style="margin:1em 1em 0em 8em" -->
+                    <p style="margin-right:auto; margin-left:auto; margin-top:2em; margin-bottom:.5em"><img src="profile_pic.png" alt="profile pic" width="250px" height="200px"></p>
                 </div>
                 <div class="row">
                     <p class="icons" style="margin-right:auto; margin-left:auto">
@@ -54,19 +57,19 @@
             <div class="col-md-9">
                 <h1 style="margin-top:1.5em; margin-left:24px; color:rgb(231, 230, 230)">Joshua Jackson</h1>
                 <p style="font-size:1.5rem; color:rgb(231, 230, 230); font-family:Georgia,serif; margin-right:6em; margin-left:24px">Computer science student at The University of Maryland, Baltimore County, with a passion for learning, creating, and coding.
-                Eager to gain experience and soak up as much information as possible. Strong Leadership skills and a quick study. Currently interning as a junior software developer at 4S Silversword LLC.</p>
+                <b>Expected graduation December 2020.</b> Eager to gain experience and soak up as much information as possible. Strong Leadership skills and a quick study. Currently interning as a junior software developer at 4S Silversword LLC.</p>
             </div>
         </div>
-        <hr style="height:5px; background-image:linear-gradient(to right, #ca2b61, #753888); margin:0em"> <!--style="border-style:solid; margin:0; display:block; height:10px; color:darkslateblue">-->
+        <hr style="height:5px; background-image:linear-gradient(to right, #ca2b61, #753888); margin:0em">
     </div>
     <div style="margin:2em">
         <h2 style="color:rgb(231, 230, 230); padding-left:8%">Work Experience</h2> 
-        <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">Junior Software Developer, 4S Silversword Software and Services LLC</p>
+        <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">Junior Software Developer, 4S Silversword Software and Services LLC (Aug 2019 to present)</p>
         <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;"> Researched and studied Field Programmable Gate Arrays(FPGA's) and given restrictions such as quality, features, and performance, advised employers on which FPGA's best fit their needs.
-            Used Software development Kits(SDK's) and Application Development Interface(API's) to progam hardware such as laser controllers.
+            Used Software development Kits(SDK's) and Application Development Interface(API's) to program hardware such as laser controllers.
             Sole developer on programs to simulate different methods of clock synchronization between various UAV's.
-            Programs included the use of space filling Gray code simulated in C++, as well as calulating and comparing phase differences, with and without noise, in Matlab.
-            Collaborated with physicist to fully understand the goal of the programs as well as the mathematics, physics, and engineering behind it.
+            Programs included the use of space filling Gray code simulated in C++, as well as calculating and comparing phase differences, with and without noise, in Matlab.
+            Collaborated with physicist to fully understand the goal of the programs as well as the mathematics, physics, and engineering behind it. Programs and their findings were featured in quarterly Small Business Innovation Research(SBIR) reports.
         </p>
         <br>
         <hr style="height:1px; width:90%; background-color:rgb(231, 230, 230)">
@@ -110,20 +113,50 @@
         Programmed the robot, using RobotC, to respond to a wireless controller</p>
 
         <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">Blockchain Messaging Program</p>
-        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">Worked with a teamateto design a basic messaging application that ran on top of the Tendermint Core blockchain application platformed.</p>
+        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">Worked with a teammate to design a basic messaging application that ran on top of the Tendermint Core blockchain application platformed.</p>
 
-        <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">Multithreading on the CLoud</p>
+        <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">Multithreading on the Cloud</p>
         <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">Implemented Conway's Game of Life in C++ with multithreading using the pthread library.<br>
         Uploaded the program to Microsoft Azure cloud and tested the runtime of the program on the cloud server against the runtime of the program on a local device. </p>
 
         <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">Ridesharing Database Project</p>
-        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">Created MySQL to create a database for a fictional ridesharing business and populated the database with data.<br>
+        <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">Used MySQL to create a database for a fictional ridesharing business and populated the database with data.<br>
         Created scripts to edit the database as well as the data.<br>
-        Created a user interface for the database using python</p>
+        Also created a user interface for the database using python</p>
 
         <p style="color:rgb(231, 230, 230); padding-left:10%; font-size:1.3rem">CMSC 201 Minesweeper</p>
         <p style="color:rgb(231, 230, 230); text-align:left; margin-left:15%; margin-right:15%; font-size:1.2rem;">Implemented Minesweeper game using 2D arrays in Python.</p>
 
+        <hr style="height:1px; width:90%; background-color:rgb(231, 230, 230); margin-top:3em">  
+
+    </div>
+    <div style="margin:2em">
+        <h2 style="color:rgb(231, 230, 230);padding-left:8%">Coursework</h2>
+        <div class="row" style="margin:0 5em">
+            <div class="col-md-4">
+                <ul class="courses">
+                    <li>Data Structures</li>
+                    <li>Algorithms (currently enrolled)</li>
+                    <li>Computer Architecture</li>
+                    <li>Operating Systems</li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <ul class="courses">
+                    <li>Software Engineering</li>
+                    <li>Databases</li>
+                    <li>Assembly</li>
+                    <li>Introduction to Artificial Intelligence</li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <ul class="courses">
+                    <li>Blockchains</li>
+                    <li>Graphical User Interface(GUI) Programming</li>
+                    <li>Principles of Computer Security</li>
+                </ul>
+            </div>
+        </div>
     </div>
 </body>
 </html>
