--- a/index.htm
+++ b/index.htm
@@ -31,15 +31,13 @@
         ul{
             color:rgb(231, 230, 230); 
             font-size:1,2rem; 
-            padding-left:8em; 
-            padding-right:8em
+            padding-left:30%; 
         }
         .col-md-4{
             padding:0em;
         }
         .courses{
-            padding-left:4em;
-            padding-right:4em;
+            padding-left:30%;
         }
     </style>
 </head>
@@ -60,7 +58,7 @@
             </div>
             <div class="col-md-9">
                 <h1 style="margin-top:1.5em; margin-left:24px; color:rgb(231, 230, 230)">Joshua Jackson</h1>
-                <p style="font-size:1.5rem; color:rgb(231, 230, 230); font-family:Georgia,serif; margin-right:6em; margin-left:24px">Computer science student at The University of Maryland, Baltimore County, with a passion for learning, creating, and coding.
+                <p style="font-size:1.5rem; color:rgb(231, 230, 230); font-family:Georgia,serif; margin-right:15%; margin-left:24px;">Computer science student at The University of Maryland, Baltimore County, with a passion for learning, creating, and coding.
                 <b>Expected graduation December 2020.</b> Eager to gain experience and soak up as much information as possible. Strong Leadership skills and a quick study. Currently interning as a junior software developer at 4S Silversword LLC.</p>
             </div>
         </div>
@@ -80,7 +78,7 @@
     </div>
     <div style="margin:2em">
         <h2 style="color:rgb(231, 230, 230);padding-left:8%">Skills</h2>
-        <div class="row" style="margin:0 5em">
+        <div class="row">
             <div class="col-md-4">
                 <ul>
                     <li>C++</li>
@@ -136,7 +134,7 @@
     </div>
     <div style="margin:2em">
         <h2 style="color:rgb(231, 230, 230);padding-left:8%">Coursework</h2>
-        <div class="row" style="margin:0 5em">
+        <div class="row">
             <div class="col-md-4">
                 <ul class="courses">
                     <li>Data Structures</li>
