--- a/index.htm
+++ b/index.htm
@@ -58,8 +58,8 @@
             </div>
             <div class="col-md-9">
                 <h1 style="margin-top:1.5em; margin-left:24px; color:rgb(231, 230, 230)">Joshua Jackson</h1>
-                <p style="font-size:1.5rem; color:rgb(231, 230, 230); font-family:Georgia,serif; margin-right:15%; margin-left:24px;">Computer science student at The University of Maryland, Baltimore County, with a passion for learning, creating, and coding.
-                <b>Expected graduation December 2020.</b> Eager to gain experience and soak up as much information as possible. Strong Leadership skills and a quick study. Currently interning as a junior software developer at 4S Silversword LLC.</p>
+                <p style="font-size:1.5rem; color:rgb(231, 230, 230); font-family:Georgia,serif; margin-right:15%; margin-left:24px;">Software Developer with a bachelor's degree in computer science from The University of Maryland, Baltimore County (graduation date: December 17th, 2020), and a passion for learning, creating, and coding.
+                Eager to gain experience and soak up as much information as possible. Strong Leadership skills and a quick study. Currently interning as a junior software developer at 4S Silversword LLC.</p>
             </div>
         </div>
         <hr style="height:5px; background-image:linear-gradient(to right, #ca2b61, #753888); margin:0em">
@@ -138,7 +138,7 @@
             <div class="col-md-4">
                 <ul class="courses">
                     <li>Data Structures</li>
-                    <li>Algorithms (currently enrolled)</li>
+                    <li>Algorithms</li>
                     <li>Computer Architecture</li>
                     <li>Operating Systems</li>
                 </ul>
